style/global.css
@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");

* {
    box-sizing: border-box;
    font-family: "Inter", sans-serif;
    transition: all 0.2s ease-in-out;
}

body {
    margin: 0;
    overflow-x: hidden;
    background-color: #e5e5f7;
    opacity: 1;
    background-image: radial-gradient(#c628f6 0.9px, #e5e5f7 0.9px);
    background-size: 40px 40px;
}

header {
    width: 100vw;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    position: fixed;
    top: 0;
    backdrop-filter: blur(3px);
    opacity: 0;
}

main {
    height: 100vh;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    background-image: url("/hero.jpg");
    background-size: cover;
}

main button {
    font-size: 0.5em;
}

.hero-cover {
    height: 100vh;
    width: 50%;
    padding: 2em;
    font-size: 2em;
    background-color: #e5e5f7;
    backdrop-filter: blur(5px);
    opacity: 0.8;
    background-image: radial-gradient(#444cf7 0.8500000000000001px, transparent 0.8500000000000001px), radial-gradient(#444cf7 0.8500000000000001px, #e5e5f7 0.8500000000000001px);
    background-size: 34px 34px;
    background-position: 0 0, 17px 17px;
}

.scroll-cta {
    display: flex;
    justify-content: center;
    align-items: center;
}

.scroll-cta img {
    position: relative;
    top: -80px;
    width: 50px;
    animation-name: please-scroll;
    animation-duration: 1.5s;
    animation-timing-function: ease-in-out;
    animation-iteration-count: infinite;
    animation-fill-mode: both;
}

@keyframes please-scroll {
    from {
        top: -80px;
    }

    to {
        top: 0px;
    }
}

.main-content {
    margin: 2em;
}

.text-1 p {
    max-width: 60%;
}

.text-1 li {
    max-width: 60%;
}

.info-1 {
    margin: 2em 0;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.info-1 img {
    max-width: 800px;
}

.cta3 {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.cta3 img {
    max-width: 80%;
}

.organizer {
    padding: 1em;
    display: flex;
    flex-direction: row;
    border-radius: 10px;
    border: dotted 2px blue;
    width: fit-content;
}

.org-grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap: 2em;
}

.organizer img {
    max-width: 250px;
    max-height: 250px;
}

.organizer span {
    margin: 0 1em;
}

em {
    border-bottom: dotted 8px blue;
}

button {
    border: solid transparent;
    padding: 1em 2.5em;
    border-radius: 10px;
    background-color: blue;
    color: white;
    font-weight: bolder;
    opacity: 1 !important;
}

button:active {
    transform: scale(0.8);
}

p,
li {
    font-size: 1.4em;
}

.landingPage {
    margin: 0 20%;
}

@media screen and (max-width: 500px) {
    main>div>h1 {
        margin: 0 0.2em !important;
        fontsize: 1em !important;
    }

    main>span {
        margin-top: 1em !important;
    }

    .landingPage {
        margin: 0 0 !important;
    }
}

footer {
    width: 100%;
    margin: 3em 0;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

footer a {
    font-size: 1.3em;
    text-decoration: none;
    color: black;
    border-bottom: solid 4px transparent;
}

footer a:hover {
    border-bottom: solid 4px blue;
}

